# xca-automatic-update-crl

./: LICENSE  README.md  START_SERVER.sh  pyproject.toml  stand.xdb  xca.xdb
central/: .env.default  config.py  hosts.json  main.py  shemas.py
central/mock/: ROOTCA.crl  ROOTCA.crt  ROOTCA.pem
central/src/: .env.default  config.py  hosts.json  main.py  shemas.py
central/src/mock/: ROOTCA_CRL.pem
central/templates/: index.html
under/: .env.default  config.py  main.py
under/mock/: CRL.pem  UNDERCA1.pem  UNDERCA2.crt  UNDERCA2.pem
under/src/: .env.default  config.py  main.py
under/src/mock/: UNDERCA1.crt  UNDERCA3.crt  UNDERCA3.pem
under/templates/: index.html
